<resources>
    <string name="app_name">InstaPhotos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="back">Back</string>
    <string name="invalid_login">Invalid Login</string>
    <string name="empty_email">Empty Email</string>
    <string name="empty_password">Empty Password</string>
    <string name="empty_name">Empty Name</string>
    <string name="empty_comment">Empty Comment</string>
    <string name="missing_fields">Missing Fields</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="invalid_submission">Invalid Submission</string>
    <string name="friends">Friends</string>
    <string name="add">Add</string>
    <string name="log_out">Log Out</string>
    <string name="timeline">Timeline</string>
    <string name="friendTimeline">\'s Timeline</string>
    <string name="post">Post</string>
    <string name="comment">Comment</string>
</resources>